# ProyectoIntegradorAnalisisDiagnosticoMedico

./: .gitignore  CMakeLists.txt  DicomHandler.cpp  DicomHandler.h  ImageProcessor.cpp  ImageProcessor.h  README.md  main.cpp
data/ct_low_dose/CT_low_dose_reconstruction_dataset/Original_Data/Quarter_Dose/3mm_Slice_Thickness/Soft_Kernel_(B30)/L109/: L109_QD_3_1.CT.0004.0001.2015.12.23.17.56.45.976136.125872251.IMA  L109_QD_3_1.CT.0004.0002.2015.12.23.17.56.45.976136.125872277.IMA  L109_QD_3_1.CT.0004.0003.2015.12.23.17.56.45.976136.125872303.IMA  L109_QD_3_1.CT.0004.0004.2015.12.23.17.56.45.976136.125872329.IMA  L109_QD_3_1.CT.0004.0005.2015.12.23.17.56.45.976136.125872355.IMA  L109_QD_3_1.CT.0004.0006.2015.12.23.17.56.45.976136.125872381.IMA  L109_QD_3_1.CT.0004.0007.2015.12.23.17.56.45.976136.125872407.IMA  L109_QD_3_1.CT.0004.0008.2015.12.23.17.56.45.976136.125872433.IMA  L109_QD_3_1.CT.0004.0009.2015.12.23.17.56.45.976136.125872459.IMA  L109_QD_3_1.CT.0004.0010.2015.12.23.17.56.45.976136.125872485.IMA  L109_QD_3_1.CT.0004.0011.2015.12.23.17.56.45.976136.125872511.IMA  L109_QD_3_1.CT.0004.0012.2015.12.23.17.56.45.976136.125872537.IMA  L109_QD_3_1.CT.0004.0013.2015.12.23.17.56.45.976136.125872563.IMA  L109_QD_3_1.CT.0004.0014.2015.12.23.17.56.45.976136.125872589.IMA  L109_QD_3_1.CT.0004.0015.2015.12.23.17.56.45.976136.125872615.IMA  L109_QD_3_1.CT.0004.0016.2015.12.23.17.56.45.976136.125872641.IMA  L109_QD_3_1.CT.0004.0017.2015.12.23.17.56.45.976136.125872667.IMA  L109_QD_3_1.CT.0004.0018.2015.12.23.17.56.45.976136.125872693.IMA  (+110 more)
